--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
 
 
-EditorStartupMap=/Game/Maps/Prototype.Prototype
+EditorStartupMap=/Game/Maps/TestLevel.TestLevel
 GlobalDefaultGameMode=/Game/GM_Base.GM_Base_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
