--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=236407A74AED46686189E4837873D834
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "72D40D184FDA5BC9E73B56B22E0B8002", "CaveEscape")
 
 [StartupActions]
 bAddPacks=True
@@ -20,7 +21,7 @@ BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
-bUseIoStore=False
+bUseIoStore=True
 bUseZenStore=False
 bMakeBinaryConfig=False
 bGenerateChunks=False
